--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,50 @@
 .strikeTHrough{
     text-decoration: line-through;
-    font-style: italic;
-    color: indigo;
+    font-style: initial;
+    color: red;
 }
 li{
     list-style-type:none
 }
+/* body{
+    background-color: #FFDE00;
+    font-style: italic;
+} */
+/* --------------------------------- */
+body {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    /* display: flex; */
+    /* justify-content: center; */
+    /* align-items: center; */
+    height: 100vh;
+    background: linear-gradient(45deg, greenyellow, dodgerblue);
+    font-family:'Montserrat Alternates', sans-serif;
+
+  }
+  
+  /* ============================================== */
+.holder {
+    width:400px;
+    margin:0 auto;
+}
+ul {
+    list-style-type: none;
+    padding: 0px;
+    background-color: #6F38C5;
+  }
+  
+  ul li {
+    padding: 8px 16px;
+    /* border-radius: 50px ;*/ 
+    border-bottom: 1px solid #ddd;
+  }
+  /* li{
+    border-radius: 50px ;
+
+  } */
+  
+  ul li:last-child {
+    border-bottom: none
+  }
